--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <!-- Masthead Subheading -->
       <p class="masthead-subheading font-weight-light mb-0">Software Engineer - Social Media Person - Sports Fan</p>
 
-      <a class="btn btn-xl btn-outline-light" "fas fa-download mr-2" href="https://startbootstrap.com/themes/freelancer/">
+      <a class="btn btn-xl btn-outline-light" "fas fa-download mr-2" href="https://drive.google.com/file/d/14G2qv9cuV15O3WfelFWZWImdM-tK-GIb/view?usp=sharing">
         Resume</a>
 
 
@@ -141,32 +141,6 @@
             <img class="img-fluid" src="img/portfolio/game.png" alt="">
           </div>
         </div>
-
-        <!-- Portfolio Item 5 -->
-        <div class="col-md-6 col-lg-4">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
-            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-              <div class="portfolio-item-caption-content text-center text-white">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/safe.png" alt="">
-          </div>
-        </div>
-
-        <!-- Portfolio Item 6 -->
-        <div class="col-md-6 col-lg-4">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
-            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-              <div class="portfolio-item-caption-content text-center text-white">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
-          </div>
-        </div>
-
-      </div>
       <!-- /.row -->
 
     </div>
@@ -269,13 +243,6 @@
     <div class="container">
       <div class="row">
 
-        <!-- Footer Location -->
-        <div class="col-lg-4 mb-5 mb-lg-0">
-          <h4 class="text-uppercase mb-4">Location</h4>
-          <p class="lead mb-0">2215 John Daniel Drive
-            <br>Clark, MO 65243</p>
-        </div>
-
         <!-- Footer Social Icons -->
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Around the Web</h4>
@@ -294,14 +261,6 @@
         </div>
 
         <!-- Footer About Text -->
-        <div class="col-lg-4">
-          <h4 class="text-uppercase mb-4">About Freelancer</h4>
-          <p class="lead mb-0">Freelance is a free to use, MIT licensed Bootstrap theme created by
-            <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
-        </div>
-
-      </div>
-    </div>
   </footer>
 
   <!-- Copyright Section -->
