--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
+            <img class="img-fluid" src="img/portfolio/TicTacToe.jpg" alt="TicTacToe">
           </div>
         </div>
 
@@ -114,7 +114,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/cake.png" alt="">
+            <img class="img-fluid" src="img/portfolio/pokedex.jpg" alt="Pokedex">
           </div>
         </div>
 
@@ -126,7 +126,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/circus.png" alt="">
+            <img class="img-fluid" src="img/portfolio/desiderata.jpg" alt="desiderata">
           </div>
         </div>
 
@@ -138,7 +138,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/game.png" alt="">
+            <img  class="img-fluid" src="img/portfolio/mygamelibrary.jpg" href="https://github.com/JordanDickow/my-game-library" alt="My Game Library">
           </div>
         </div>
       <!-- /.row -->
