can link to first project

--- a/index.html
+++ b/index.html
@@ -305,11 +305,10 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/TicTacToe.jpg" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5"> Tic Tac Toe is a front end application which was built with HTML, CSS and JavaScript.</p>
-                <button class="btn btn-primary" href="" data-dismiss="modal">
-                  <i class="fas fa-times fa-fw"></i>
-                  Go to Tic Tac Toe!
-                </button>
+                <p class="mb-5"> Tic Tac Toe is a front end application that was built with HTML, CSS, and JavaScript.</p>
+                <a class="btn btn-xl btn-outline-dark" "fas fa-download mr-2" href="https://jordandickow.github.io/TicTacToe/">
+                Go to Tic Tac Toe!  </a>
+
               </div>
             </div>
           </div>
