--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ In my spare time, I like to watch sports and play video games. </p>
       <div class="row">
 
         <!-- Portfolio Item 1 -->
-        <div class="col-md-6 col-lg-4">
+        <div class="col-md-6 col-lg-6">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
@@ -225,7 +225,7 @@ In my spare time, I like to watch sports and play video games. </p>
         </div>
 
         <!-- Portfolio Item 2 -->
-        <div class="col-md-6 col-lg-4">
+        <div class="col-md-6 col-lg-6">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
@@ -237,11 +237,11 @@ In my spare time, I like to watch sports and play video games. </p>
         </div>
 
         <!-- Portfolio Item 3 -->
-        <div class="col-md-6 col-lg-4">
+        <div class="col-md-6 col-lg-6">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
-            <div class="portfolio-item-caption d-flex align-items-flex-end justify-content-center h-100 w-100" style="padding: 0px, 20px, 0px, 0px,">
+            <div class="portfolio-item-caption d-flex align-items-flex-center justify-content-center h-100 w-100" style="padding-left:10px!important;">
               <div class="portfolio-item-caption-content text-center text-white">
-                <i class="fas fa-plus fa-3x"></i>
+                <i class="fas fa-plus fa-3x" style="padding-top:40px!important;"></i>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio/pokedex.jpg" alt="Pokedex">
@@ -249,9 +249,9 @@ In my spare time, I like to watch sports and play video games. </p>
         </div>
 
         <!-- Portfolio Item 4 -->
-        <div class="col-md-6 col-lg-4">
+        <div class="col-md-6 col-lg-6">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
-            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100" style="padding-left:10px!important;">
               <div class="portfolio-item-caption-content text-center text-white">
                 <i class="fas fa-plus fa-3x"></i>
               </div>
