--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ In my spare time, I like to watch sports and play video games. </p>
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img  class="img-fluid" src="img/portfolio/TicTacToe.jpg"  alt="My Game Library">
+            <img  class="img-fluid" src="img/portfolio/medtask.jpg"  alt="Medtask">
           </div>
         </div>
       <!-- /.row -->
@@ -487,7 +487,7 @@ In my spare time, I like to watch sports and play video games. </p>
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Tic Tac Toe</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Medtask</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -497,10 +497,10 @@ In my spare time, I like to watch sports and play video games. </p>
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/TicTacToe.jpg" alt="">
+                <img class="img-fluid rounded mb-5" src="img/portfolio/medtask.jpg" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5"> Tic Tac Toe is a front end application which was built with HTML,CSS, and JavaScript. </p>
-                <a class="btn btn-xl btn-outline-dark" "fas fa-download mr-2" href="https://jordandickow.github.io/TicTacToe/">  Go to Tic Tac Toe</a>
+                <p class="mb-5"> This is a medicine task manager application. Medtask is a full stack application that was built with React.js for the front end framework and Mongodb and Express.js as the backend API.</p>
+                <a class="btn btn-xl btn-outline-dark" "fas fa-download mr-2" href="https://jordandickow.github.io/medtask-client/">  Go to Medtask</a>
               </div>
             </div>
           </div>
